Exo 2 - RelativeLayout dp

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,8 @@
         android:layout_height="wrap_content"
         android:background="@color/gray"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="5"
-        android:layout_marginTop="5"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
         android:text="Btn1" />
 
     <Button
@@ -25,7 +25,7 @@
         android:background="@color/gray"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="5"
+        android:layout_marginRight="5dp"
         android:text="Btn2" />
 
     <Button
@@ -36,7 +36,7 @@
         android:layout_gravity="center"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="5"
+        android:layout_marginLeft="5dp"
         android:text="Btn3" />
 
     <Button
@@ -45,9 +45,9 @@
         android:layout_height="wrap_content"
         android:background="@color/gray"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5"
-        android:layout_marginLeft="5"
-        android:layout_marginRight="5"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:text="Btn4" />
 
     <Button
@@ -68,7 +68,7 @@
         android:layout_gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60"
+        android:layout_marginBottom="60dp"
         android:text="Btn6" />
 
     <Button
@@ -78,8 +78,8 @@
         android:background="@color/gray"
         android:layout_alignParentRight="true"
         android:layout_toRightOf="@id/btn1"
-        android:layout_marginLeft="10"
-        android:layout_marginRight="5"
-        android:layout_marginTop="5"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
         android:text="Btn7" />
 </RelativeLayout>
